--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Android2DZ5</string>
-    <string name="action_settings">Settings</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
+    <string name="action_settings" translatable="false">Settings</string>
+    <string name="appwidget_text" translatable="false">EXAMPLE</string>
+    <string name="add_widget" translatable="false">Add widget</string>
+    <string name="unset">UNSET</string>
+    <string name="set">SET</string>
+    <string name="current_melodie_is">Current melodie is:</string>
+    <string name="alarm_off">Alarm off!</string>
+    <string name="alarm_set_to">"Alarm set to: "</string>
+    <string name="did_you_set_alarm">Did you set the alarm?</string>
     <string-array name="whale_array">
         <item>crystallize</item>
         <item>roundtable_rival</item>
